--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -150,6 +150,7 @@ h6 {
   padding: 20px 0;
   transition: all 0.5s;
   z-index: 997;
+  padding-left: 0 !important;
 }
 
 .header .logo {
@@ -159,6 +160,9 @@ h6 {
 .header .logo img {
   height: 40px;
   margin-right: 8px;
+  padding-left: 0px !important;
+  margin-left: 0px !important;
+  float: left !important;
 }
 
 .header .logo h1 {
